  para los que no han cambiado.
- Día "blanco" para que se pueda iluminar la tira completamente desde la interfaz.

2 de enero de 2017

- maqueta: Asociación de estaciones.
- maqueta: Dejar de reclamar desvíos (porque reclamaba al tren de delante).
- dijkstra: Usar el peso del tramo de origen, pasando el de destino como parámetro.

5 de enero de 2017

- Megafonía en las estaciones.

6 de enero de 2017

- Megafonía "internacionalizada" (soporta acentos)
- Transición suave entre canales

8 de enero de 2017

- maqueta: Soporte para restauración de velocidades después de "pausa".
- newlayout: Boton de "pausa" y de restauración de velocidades ("play"). Botón "Stop"
  para borrar las velocidades guardadas.
- Nuevas imágenes para los días nublado y tormentoso, de día completo.
- Encendido y apagado automático de las luces según la luz ambiente.

21 de enero de 2017

- con_puente: Nueva medición de la locomotora de vapor.
- Día soleado menos azul, menos saturado y un poco menos brillante.

29 de enero de 2017

- con_puente: Nuevas locomotoras.
- maqueta: evitar que un "parpadeo" en el tramo anterior pare el tren
  que está en el siguiente.

4 de febrero de 2017

- maqueta: eliminar restos de algoritmo bellman_ford

17 de febrero de 2017

- con_puente: Mediciones de nuevas locomotoras; Documentación
- newlayout: eventos touch*

1 de marzo de 2017

- maqueta: Evitar que se mueva un tren cuando lo que cambia de posición es el vagón
  de cola. Fix #1
- newlayout: Alinear la visualización de la detección con la visualización de trenes
  (evitar que salga el indicador del tren en todos los tramos). Fix #2

18 de marzo de 2017

- maqueta, chips_maqueta: Permitir configurar la duración del pulso de los desvíos. Fix #3
- newlayout: Soporte para fotos de locomotoras. Fix #4

20 de marzo de 2017

- maqueta: Permitir inicialización de Locomotora con porcentaje_minimo en lugar de
  minimo. Fix #5
- Documentación de algunos directorios

