@@ -1,0 +1,6 @@
+# Estaciones
+
+En este directorio debe haber una imagen para cada identificador de estación que haya en la configuración.
+
+El nombre de fichero debe ser `id.jpg` y la imagen debería tener 128x84 pixels.
+
