@@ -464,4 +464,8 @@
   minimo. Fix #5
 - Documentación de algunos directorios
 
+21 de marzo de 2017
+
+- newlayout: Mover fotos de estaciones al directorio "static/estaciones".
+
 
